# mc-dose-4d-jobcluster

./: CMakeLists.txt  contributors.txt
.kdev4/: icns-core.kdev4
icnsApplications/: CMakeLists.txt
icnsApplications/icnsImageTools/: CMakeLists.txt  icnsAffineImageRegistration.cxx  icnsAffineImageTransformation.cxx  icnsConvertINIData.cxx  icnsImageCropping.cxx  icnsImageHistogramMatching.cxx  icnsImageResampling.cxx  icnsImageThresholding.cxx  icnsImageToImageDistanceComputation.cxx  icnsPythagoreanImageGeneration.cxx  icnsSegmentationAccuracyEvaluation.cxx
icnsApplications/icnsRobustPCA/: CMakeLists.txt  icnsMatrixFunctions.cpp  icnsMatrixFunctions.h  icnsRobustPCA.cpp  icnsRobustPCA.h  icnsRobustPCADecomposition.cxx  icnsRobustPCADecompositionEvaluation.cxx
icnsApplications/icnsSurrogateBasedMotionModeling/: CMakeLists.txt  imiBeltSurrogate.cpp  imiBeltSurrogate.h  imiCCAMotionPrediction.cpp  imiCCAMotionPrediction.h  imiDiaphragmSurrogate.cpp  imiDiaphragmSurrogate.h  imiGaussianKernel.cpp  imiGaussianKernel.h  imiGenerateAirVolumeSurrogateMain.cxx  imiGenerateBeltSurrogateMain.cxx  imiGenerateDiaphragmSurrogateMain.cxx  imiGenerateMatrixFromVectorFieldsMain.cxx  imiGenerateRangeImageSurrogateMain.cxx  imiGenerateVectorFieldFromVectorMain.cxx  imiGenericCCATrainingAndPredictionMain.cxx  imiGenericKernelMLRTrainingAndPredictionMain.cxx  imiGenericKernelPCRTrainingAndPredictionMain.cxx  imiGenericMLRPredictionMain.cxx  imiGenericMLRTrainingAndPredictionMain.cxx  imiGenericMLRTrainingMain.cxx  imiGenericPCRTrainingAndPredictionMain.cxx  imiGenericPLSTrainingAndPredictionMain.cxx  imiKernel.cpp  imiKernel.h  imiKernelMLRMotionPrediction.cpp  imiKernelMLRMotionPrediction.h  imiKernelPCA.cpp  imiKernelPCA.h  imiKernelPCRMotionPrediction.cpp  imiKernelPCRMotionPrediction.h  imiLinearKernel.cpp  imiLinearKernel.h  imiMATLABMatrixCompare.cxx  imiMLRMotionPrediction.cpp  imiMLRMotionPrediction.h  imiMotionPredictionLOOCV.cpp  imiMotionPredictionLOOCV.h  imiMotionPredictionSFS.cpp  imiMotionPredictionSFS.h  (+12 more)
icnsApplications/icnsSurrogateBasedMotionPrediction/: CMakeLists.txt  icnsGenerateMatrixFromVectorFieldsMain.cxx  icnsGenerateVectorFieldFromVectorMain.cxx  icnsGenericMLRPredictionMain.cxx  icnsGenericMLRTrainingAndPredictionMain.cxx  icnsGenericMLRTrainingMain.cxx  icnsLogEuclideanMLRPredictionMain.cxx  icnsMATLABMatrixCompare.cxx  icnsMLRMotionPrediction.cpp  icnsMLRMotionPrediction.h  icnsMotionPredictionSFS.cpp  icnsMotionPredictionSFS.h  icnsSurrogateBasedMotionPredictionTypeDefinitions.h
icnsApplications/icnsVariationalRegistration/: CMakeLists.txt  icnsVariationalRegistration.cxx
icnsApplications/icnsVectorFieldTools/: CMakeLists.txt  icnsComposeVectorFields.cxx  icnsValidateLandmarks.cxx  icnsVectorFieldDeformationMetricComputation.cxx  icnsVectorFieldStatistics.cxx
icnsApplications/icnsVisualizationTools/: CMakeLists.txt  icnsImageSliceScreenshot.cxx  icnsImageSliceScreenshot_2D.cxx
icnsApplications/icnsVonEconomo3D/: CMakeLists.txt  icnsAppendVTKPolyData.cxx  icnsEvaluateVTKPolyDataLabelAreas.cxx  icnsFlipVTKPolyData.cxx  icnsICPBasedSurfaceRegistration.cxx  icnsImageThreads.cxx  icnsImageThreads.h  icnsImageThreads_pthread.cxx  icnsImageThreads_sequ.cxx  icnsLandmarkBasedSurfaceRegistration Kopie.cxx  icnsLandmarkBasedSurfaceRegistration.cxx  icnsManualSurfaceRegistration.cxx  icnsSurfaceConstrainedDiffusionRegistrationFilter.cpp  icnsSurfaceConstrainedDiffusionRegistrationFilter.h  icnsSurfaceConstrainedDiffusionRegistrationMain.cxx  icnsSurfaceRegistrationFilter.cpp  icnsSurfaceRegistrationFilter.h  icnsSymmetricSurfaceConstrainedDiffusionRegistrationFilter.cpp  icnsSymmetricSurfaceConstrainedDiffusionRegistrationFilter.h  icnsTransferVTKPolyDataScalars.cxx  icnsTransformVTKPolyData.cxx  icnsVE3D.cxx  icnsVE3D_defineLandmarks.cxx  icnsViewMultiTextureOBJ.cxx  icnsViewVTKPolyData.cxx  icnsVonEconomo.cxx.old
scripts_bash/: runRegistration.sh  runRegistrationEachPhase.sh  test.sh
