# --------------------------------------------------
# Filename: CMakeLists.txt for icnsVariationalRegistration
# Initial Author: Rene Werner
# Copyright (C) 2016 Department of Computational 
#   Neuroscience, UKE
# --------------------------------------------------

PROJECT( icnsVariationalImageRegistration )

# Set executable:

ADD_EXECUTABLE( icnsVariationalRegistration icnsVariationalRegistration.cxx )